// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (brace-style) /src/tslint-eslint-rules/brace-style/test.ts[4, 1]: Opening curly brace does not appear on the same line as controlling statement.

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
if (foo) {
  bar();
}
else {
  baz();
}

======
if (foo) {
  bar();
} else {
  baz();
}

>>>>>> after
"
`;
